for Java 11 - use getMenuShortcutKeyMaskEx, getDeclaredConstructor replace deprecated openURL with openPath, openURI, openURIString